# tb3_aprilTag

./: .gitignore  .gitmodules  README.md  environment.sh
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/apriltags/: AprilTagDetection.h  AprilTagDetections.h
catkin_ws/devel/include/rapyuta_msgs/: AprilTagDetection.h  AprilTagDetections.h  pose.h
catkin_ws/devel/include/turtlebot3_msgs/: MotorPower.h  PanoramaImg.h  SensorState.h  SetFollowState.h  SetFollowStateRequest.h  SetFollowStateResponse.h  TakePanorama.h  TakePanoramaRequest.h  TakePanoramaResponse.h  VersionInfo.h
catkin_ws/devel/lib/apriltags/: apriltags
catkin_ws/devel/lib/pkgconfig/: apriltags.pc  rapyuta_msgs.pc  tags_sub.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  usb_cam.pc
catkin_ws/devel/lib/python2.7/dist-packages/apriltags/msg/: _AprilTagDetection.py  _AprilTagDetections.py  __init__.py
catkin_ws/devel/lib/python2.7/dist-packages/rapyuta_msgs/msg/: _AprilTagDetection.py  _AprilTagDetections.py  __init__.py  _pose.py
catkin_ws/devel/lib/tags_sub/: tags_sub
catkin_ws/devel/lib/turtlebot3_fake/: turtlebot3_fake_node
catkin_ws/devel/lib/turtlebot3_gazebo/: gazebo_ros_turtlebot3
catkin_ws/devel/lib/usb_cam/: usb_cam_node
catkin_ws/devel/share/apriltags/cmake/: apriltags-msg-paths.cmake  apriltagsConfig.cmake
catkin_ws/devel/share/rapyuta_msgs/cmake/: rapyuta_msgs-msg-paths.cmake  rapyuta_msgsConfig.cmake
catkin_ws/devel/share/roseus/ros/apriltags/: manifest.l
catkin_ws/devel/share/roseus/ros/rapyuta_msgs/: manifest.l
catkin_ws/devel/share/roseus/ros/tags_sub/: manifest.l
catkin_ws/devel/share/roseus/ros/turtlebot3_msgs/: manifest.l
catkin_ws/devel/share/tags_sub/cmake/: tags_sub-msg-paths.cmake  tags_subConfig.cmake
catkin_ws/devel/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
catkin_ws/devel/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
catkin_ws/devel/share/turtlebot3_fake/cmake/: turtlebot3_fakeConfig.cmake
catkin_ws/devel/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
catkin_ws/devel/share/turtlebot3_msgs/cmake/: turtlebot3_msgs-msg-paths.cmake  turtlebot3_msgsConfig.cmake
catkin_ws/devel/share/turtlebot3_navigation/cmake/: turtlebot3_navigationConfig.cmake
catkin_ws/devel/share/turtlebot3_slam/cmake/: turtlebot3_slamConfig.cmake
catkin_ws/devel/share/turtlebot3_teleop/cmake/: turtlebot3_teleopConfig.cmake
catkin_ws/devel/share/usb_cam/cmake/: usb_camConfig.cmake
catkin_ws/src/: tb3_multiplot.xml
catkin_ws/src/apriltags/conf/: aprilTag.rviz  rqt_multiplot.xml
catkin_ws/src/apriltags/launch/: gazebo_cam_apriltags.launch  usb_cam_apriltags.launch
catkin_ws/src/rapyuta_msgs/: CMakeLists.txt
catkin_ws/src/rapyuta_msgs/msg/: pose.msg
catkin_ws/src/tags_sub/: CMakeLists.txt  package.xml
catkin_ws/src/tags_sub/include/tags_sub/: tags_sub.h
catkin_ws/src/tags_sub/launch/: .launchfile.launch.swp  start_all_camera-not-yet.launch
catkin_ws/src/tags_sub/src/: tags_sub.cpp
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/Tag0/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/Tag1/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/Tag2/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/Tag3/: model.sdf
catkin_ws/src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3/: model.sdf
catkin_ws/src/usb_cam/launch/: usb_cam-test.launch
software/apriltags-cpp/src/: camtest.cpp
(+64 files in other folders)
